fixing wrapping

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -111,8 +111,8 @@ pre, code {
     white-space: normal; /* Prevent line break */
     overflow-x: visible; /* No horizontal scrolling */
     word-break: break-word; /*Don't break long words */
-    display: inline-flex; /* Inline flex for alignment */
-    align-items: baseline; /* Align items to the baseline */
+    display: flex; 
+    align-items: center; 
     flex-wrap: wrap; /* Allow wrapping */
     font-family: 'Press Start 2P', monospace;
     gap: 0.5rem; /* Space between prompt and text */
